@@ -1,3 +1,13 @@
+
+2009-09-20  Ivan Maidanski <ivmai@mail.ru>
+
+	* allchblk.c (GC_freehblk): Adjust local variables indentation.
+	* mallocx.c (GC_generic_malloc_many): Ditto.
+	* typd_mlc.c (GC_malloc_explicitly_typed_ignore_off_page,
+	GC_calloc_explicitly_typed): Ditto.
+	* typd_mlc.c (GC_make_array_descriptor): Remove unnecessary
+	brackets.
+
 2009-09-20  Ivan Maidanski <ivmai@mail.ru>
 
 	* configure.ac: Replace GC_WIN32_THREADS with GC_THREADS.
